manifests/installation/bare/onex/onex-fakeserver/deployment.yaml
# Copyright 2020 Lingfei Kong <colin404@foxmail.com>. All rights reserved.
# Use of this source code is governed by a MIT style
# license that can be found in the LICENSE file.

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: onex-fakeserver # 资源标签
  name: onex-fakeserver # 资源名称
spec:
  replicas: 1 # 副本数
  progressDeadlineSeconds: 10
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: onex-fakeserver
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: onex-fakeserver
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - onex-fakeserver
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - args:
        - --config=/opt/onex/conf/onex-fakeserver.yaml
        image: ccr.ccs.tencentyun.com/onexstack/onex-fakeserver-amd64:v0.1.0
        name: onex-fakeserver
        ports:
        - containerPort: 38443
          name: http-https
          protocol: TCP
        - containerPort: 39090
          name: grpc
          protocol: TCP
        livenessProbe:
          tcpSocket:
            port: 38443
          failureThreshold: 1
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 3
        readinessProbe:
          tcpSocket:
            port: 38443
          failureThreshold: 1
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 3
        startupProbe:
          tcpSocket:
            port: 38443
          failureThreshold: 10
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 3
        resources:
            limits:
              cpu: 250m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 512Mi
        imagePullPolicy: IfNotPresent
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /opt/onex/conf/onex-fakeserver.yaml
          name: onex-fakeserver
          subPath: onex-fakeserver.yaml
        - mountPath: /opt/onex/cert
          name: onex-tls
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
      terminationGracePeriodSeconds: 5
      volumes:
      - configMap:
          defaultMode: 420
          items:
          - key: onex-fakeserver.yaml
            path: onex-fakeserver.yaml
          name: onex-fakeserver
        name: onex-fakeserver
      - secret:
          defaultMode: 420
          secretName: onex-tls
        name: onex-tls
